update meta tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to gaming accesorie, the ultimate destination for gaming accessories. We offer a wide range of high-quality gaming products to enhance your gaming experience. Shop now!"
+    />
+    <meta
+      name="keywords"
+      content="gaming accessories, gaming equipment, gaming peripherals, gaming keyboards, gaming mice, gaming headsets, gaming controllers, gaming chairs"
+    />
+    <meta name="author" content="Mahdi Dehgani" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="bingbot" content="index, follow" />
+    <meta name="rating" content="general" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="/fav.png" />
     <title>Developed by Meiti</title>
   </head>
   <body>
